# etcd3-client

./: .coveragerc  .envrc  .flake8  .gitignore  .pre-commit-config.yaml  AUTHORS.md  MANIFEST.in  Makefile  README.md  buf.gen.yaml  mypy.ini  pyproject.toml  requirements-dev.txt  requirements-infra.txt  requirements.txt  setup.cfg  setup.py
docs/: getting-started.md
etcd3/: client.py  leases.py  transactions.py  utils.py  watch.py
etcd3/rpc/: __init__.py  kv_pb2.py  membership_pb2.py  membership_pb2.pyi  rpc_pb2.py  rpc_pb2.pyi  rpc_pb2_grpc.pyi  version_pb2.pyi
proto/: Dockerfile  generate.sh
proto/etcd3/rpc/: membership.proto  rpc.proto  version.proto
src/etcd3/: __init__.py  base.py  client.py  events.py  exceptions.py  request_factory.py  transactions2.py  utils.py  watch.py
src/etcd3/rpc/: auth_pb2.py  auth_pb2.pyi  kv_pb2.py  kv_pb2.pyi  kv_pb2_grpc.pyi  membership_pb2.py  membership_pb2.pyi  rpc_pb2.py  rpc_pb2.pyi  rpc_pb2_grpc.py  rpc_pb2_grpc.pyi  version_pb2.py  version_pb2.pyi  version_pb2_grpc.pyi
tests/: conftest.py  docker-compose.yml  test_client_delete.py  test_client_errors.py  test_client_get.py  test_client_lease.py  test_client_misc.py  test_client_put.py  test_client_txn.py  test_client_watch.py  test_sanity.py  test_tx_builder.py  test_tx_response.py
